[package]
name = "bevy_millions_ball"
version = "0.1.0"
edition = "2024"
authors = ["AllenPocketGamer <allenpocketwork@gmail.com>"]
description = "A high-performance bevy example for sphere collision detection based on uniform grid partitioning"
repository = "https://github.com/AllenPocketGamer/bevy_millions_ball"
keywords = ["bevy", "plugin", "physics", "collision detection", "uniform grid partitioning"]
readme = "README.md"

[dependencies]
bevy = "0.15.3"
bevy_radix_sort = "0.15.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.8.0"
rand_chacha = "0.3.1"
bytemuck = { version = "1.7.0", features = ["derive"] }